@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<diff xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://x4dynlib.access.ly\libraries\aiscripts.xsd">
+
+   <add sel="//params">
+      <param name="IDLE_RETURN_HOME"  type="internal" default="false"/>
+   </add>
+
+   <add sel="//create_order[@name='$dockorder'][@object='this.assignedcontrolled']">
+      <param name="IDLE_RETURN_HOME" value="$IDLE_RETURN_HOME"/>
+   </add>
+
+   <add sel="//interrupts">
+      <handler>
+         <conditions>
+            <event_object_signalled object="this.ship" param="'Cancel_IdleReturnHome'"/>
+            <check_value value="$IDLE_RETURN_HOME == true"/>
+         </conditions>
+         <actions>
+            <cancel_order order="this.ship.order"/>
+         </actions>
+      </handler>
+   </add>
+
+</diff>
