@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<content id="JP_ScriptLibrary" name="JP_ScriptLibrary" description="This is a library of scripts utilized by JP mods." author="JanPanthera" version="100" date="2023-06-17" save="0" enabled="1">
+<content id="JP_ScriptLibrary" name="JP_ScriptLibrary" description="This is a library of scripts utilized by JP mods." author="JanPanthera" version="101" date="2023-06-19" save="0" enabled="1">
    <text language="7"  name="JP_ScriptLibrary" description="Это библиотека скриптов, используемых модами JP." author="JanPanthera"/>
    <text language="33" name="JP_ScriptLibrary" description="Il s'agit d'une bibliothèque de scripts utilisés par les mods JP." author="JanPanthera"/>
    <text language="34" name="JP_ScriptLibrary" description="Esta es una biblioteca de scripts utilizada por los mods JP." author="JanPanthera"/>
